# provisioner-plugins

./: .gitignore  Makefile  README.md  setup
provisioner/: .coveragerc  .gitignore  Makefile  pyproject.toml  pytest.ini
provisioner/.git-deps/: config.json
provisioner/provisioner/: main.py
provisioner/provisioner/common/anchor/: anchor_runner.py
provisioner/provisioner/common/dummy/: hello_world_runner.py
provisioner/provisioner/common/installer/: installer_runner.py
provisioner/provisioner/common/kubernetes/: remote_k3s_manager.py
provisioner/provisioner/common/remote/: remote_connector.py  remote_connector_test.py  remote_network_configure.py  remote_network_configure_test.py  remote_os_configure.py  remote_os_configure_test.py
provisioner/provisioner/common/sd_card/: image_burner_test.py
provisioner/provisioner/config/: config.yaml  config_resolver.py  typer_remote_opts.py
provisioner/provisioner/config/domain/: config.py  config_fakes.py  config_test.py
provisioner/provisioner/examples/: cli.py
provisioner/runners/: install_sdist.sh  install_sdist_pip.sh
provisioner/runners/local_bin/: provisioner  provisioner-pip
provisioner_examples_plugin/: .coveragerc  Makefile  main_dev.py  main_fake.py  poetry.toml  pyproject.toml  pytest.ini
provisioner_examples_plugin/.git-deps/: config.json
provisioner_examples_plugin/provisioner_examples_plugin/: main.py  main_dev.py  main_fake.py  main_test.py
provisioner_examples_plugin/provisioner_examples_plugin/anchor/: anchor_cmd.py  anchor_cmd_test.py  cli.py  cli_test.py
provisioner_examples_plugin/provisioner_examples_plugin/ansible/: cli.py  cli_test.py  hello_world_cmd.py  hello_world_cmd_test.py  hello_world_runner.py  hello_world_runner_test.py
provisioner_examples_plugin/provisioner_examples_plugin/config/: config.yaml
provisioner_examples_plugin/provisioner_examples_plugin/domain/: config.py  config_fakes.py
provisioner_examples_plugin/provisioner_examples_plugin/resources/: manifest.json  plugin-manifest.json
provisioner_examples_plugin/runners/: install_sdist_pip.sh
provisioner_examples_plugin/src/anchor/: anchor_cmd_test.py  cli_test.py
provisioner_features_lib/: .coveragerc  .gitignore  Makefile  pyproject.toml
provisioner_features_lib/.git-deps/: config.json
provisioner_features_lib/provisioner_features_lib/anchor/: anchor_runner.py  typer_anchor_opts.py  typer_anchor_opts_callback.py  typer_anchor_opts_fakes.py  typer_anchor_opts_test.py
provisioner_features_lib/provisioner_features_lib/config/: config_resolver.py  config_resolver_fakes.py  config_resolver_test.py
provisioner_features_lib/provisioner_features_lib/remote/: remote_connector.py  remote_connector_fakes.py  remote_connector_test.py  typer_remote_opts.py  typer_remote_opts_callback.py  typer_remote_opts_fakes.py  typer_remote_opts_test.py
provisioner_features_lib/provisioner_features_lib/sd_card/: image_burner.py  image_burner_test.py
provisioner_features_lib/provisioner_features_lib/test_lib/: fake_app.py
provisioner_installers_plugin/: .coveragerc  Makefile  main_dev.py  main_fake.py  pyproject.toml  pytest.ini
provisioner_installers_plugin/.git-deps/: config.json
provisioner_installers_plugin/provisioner_installers_plugin/: main.py  main_dev.py  main_fake.py  main_test.py
provisioner_installers_plugin/provisioner_installers_plugin/cli/: cli.py  cli_test.py
provisioner_installers_plugin/provisioner_installers_plugin/installer/: installables.json  utilities.py  versions.py
provisioner_installers_plugin/provisioner_installers_plugin/k3s/: cli.py
provisioner_installers_plugin/provisioner_installers_plugin/kubernetes/: cli.py
provisioner_installers_plugin/provisioner_installers_plugin/resources/: config.yaml  manifest.json  plugin-manifest.json
provisioner_installers_plugin/runners/: poetry_runner.sh
provisioner_installers_plugin/src/cli/: cli_test.py
provisioner_single_board_plugin/: .coveragerc  Makefile  main_dev.py  main_fake.py  pyproject.toml  pytest.ini
provisioner_single_board_plugin/.git-deps/: config.json
provisioner_single_board_plugin/provisioner_single_board_plugin/: main.py  main_dev.py  main_fake.py  main_test.py
provisioner_single_board_plugin/provisioner_single_board_plugin/config/: config.yaml
provisioner_single_board_plugin/provisioner_single_board_plugin/raspberry_pi/: cli.py
provisioner_single_board_plugin/provisioner_single_board_plugin/resources/: config.yaml  manifest.json  plugin-manifest.json
python_core_lib/: .coveragerc  Makefile  poetry.toml  pyproject.toml  pytest.ini
python_core_lib/.git-deps/: config.json
python_core_lib/python_core_lib/: temp.py
python_core_lib/python_core_lib/cli/: entrypoint.py  state.py  typer_callbacks.py
python_core_lib/python_core_lib/config/: config_reader.py  config_reader_fakes.py  config_reader_test.py
python_core_lib/python_core_lib/domain/: serialize.py
python_core_lib/python_core_lib/errors/: cli_errors.py
python_core_lib/python_core_lib/func/: either.py  environment.py  pyfn.py  pyfn_test.py
python_core_lib/python_core_lib/info/: system_reader.py
python_core_lib/python_core_lib/infra/: context.py  evaluator.py  log.py  remote_context.py
python_core_lib/python_core_lib/shared/: collaborators.py  collaborators_fakes.py
python_core_lib/python_core_lib/test_lib/: assertions.py  test_cli_runner.py  test_env.py  test_errors.py
python_core_lib/python_core_lib/utils/: browser_test.py  checks.py  checks_fakes.py  github.py  github_fakes.py  hosts_file.py  hosts_file_fakes.py  httpclient.py  httpclient_fakes.py  httpclient_test.py  io_utils.py  io_utils_fakes.py  json_util.py  network.py  network_fakes.py  network_test.py  os.py  os_test.py  package_loader.py  paths.py  paths_fakes.py  patterns.py  patterns_fakes.py  printer.py  printer_fakes.py  process.py  process_fakes.py  progress_indicator.py  progress_indicator_fakes.py  prompter.py  prompter_fakes.py  properties.py  properties_fakes.py  summary.py  summary_fakes.py  yaml_util.py  yaml_util_test.py
python_core_lib/runners/: poetry_runner_dev.sh
(+233 files in other folders)
