[tool.poetry]
name = "provisioner_examples_plugin"
version = "0.1.4"
description = "Python Examples Library"
authors = ["Zachi Nachshon <zachi.nachshon@gmail.com>"]

# Include relative modules using the poetry-mutiproject-plugin
packages = [
    { include = "main.py", to = "provisioner_examples_plugin"},
    { include = "src", to = "provisioner_examples_plugin" },
    { include = "resources", to = "provisioner_examples_plugin" },
]

[tool.poetry.scripts]
# This module is not meant to be used as a standalone CLI, rather used as a plugin/library for a module with a main entry point i.e. provisioner
test_runner = "main_fake:fake_app"
example_plugin = "main_dev:main"

# For production and PyPi publishing
[tool.poetry.dependencies]
python = "^3.11"
provisioner-shared = "^0.1.11"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"