[tool.poetry]
name = "provisioner_examples_plugin"
version = "0.1.10"
description = "Python Examples Library"
authors = ["Zachi Nachshon <zachi.nachshon@gmail.com>"]

# Include relative modules using the poetry-mutiproject-plugin
packages = [
    { include = "provisioner_examples_plugin" }
]

# Exclude test files from the package
exclude = [
    "**/*_test.py",
    "**/*_test/*",
    "*_test.py",
    "*_test/*"
]

[tool.poetry.scripts]
# This module is not meant to be used as a standalone CLI, rather used as a plugin/library for a module with a main entry point i.e. provisioner
test_runner = "main_fake:fake_app"

# For production and PyPi publishing
[tool.poetry.dependencies]
python = "^3.11"
provisioner_shared = ">=0.0.1"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"