[tool.poetry]
name = "provisioner_installers_plugin"
version = "0.1.6"
description = "Python Installers Library"
authors = ["Zachi Nachshon <zachi.nachshon@gmail.com>"]

# Include relative modules using the poetry-mutiproject-plugin
packages = [
    { include = "provisioner_installers_plugin"}
]

[tool.poetry.scripts]
# This module is not meant to be used as a standalone CLI, rather used as a plugin/library for a module with a main entry point i.e. provisioner
test_runner = "main_fake:fake_app"
installers_plugin = "main_dev:main"

# For production and PyPi publishing
[tool.poetry.dependencies]
python = "^3.11"
provisioner-shared = "^0.1.11"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"