[tool.poetry]
name = "provisioner_single_board_plugin"
version = "0.1.2"
description = "Python Single Boards Library"
authors = ["Zachi Nachshon <zachi.nachshon@gmail.com>"]

packages = [
    { include = "main.py", to = "provisioner_single_board_plugin"},
    { include = "src", to = "provisioner_single_board_plugin" },
    { include = "resources", to = "provisioner_single_board_plugin" },
]

[tool.poetry.scripts]
# This module is not meant to be used as a standalone CLI, rather used as a plugin/library for a module with a main entry point i.e. provisioner
test_runner = "main_fake:main"
single_board_plugin = "main_dev:main"

[tool.poetry.dependencies]
python = "^3.11"
provisioner-shared = {path = "/Users/zachin/codebase/github/provisioner/provisioner_shared", develop = true}  # provisioner-shared = "^0.1.11"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"