[tool.poetry]
name = "provisioner_single_board_plugin"
version = "0.1.5"
description = "Python Single Boards Library"
authors = ["Zachi Nachshon <zachi.nachshon@gmail.com>"]

packages = [
    { include = "provisioner_single_board_plugin" },
]

# Exclude test files from the package
exclude = [
    "**/*_test.py",
    "**/*_test/*",
    "*_test.py",
    "*_test/*"
]

[tool.poetry.scripts]
# This module is not meant to be used as a standalone CLI, rather used as a plugin/library for a module with a main entry point i.e. provisioner
test_runner = "main_fake:main"

[tool.poetry.dependencies]
python = "^3.11"
provisioner_shared = "~0.1.19"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"